чтение форм по умолчанию